--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "alpinejs": "^2.7.0",
     "cross-env": "^7.0.2",
     "laravel-mix": "^5.0.5",
     "resolve-url-loader": "3.1.0",
